# bazel-k8s-example

./: .dazelrc  .gitignore  BUILD.bazel  WORKSPACE  cpp_job.yaml  deployment_tmpl.yaml  go_deployment.yaml
cpp-job/: BUILD.bazel
go-backend/: BUILD.bazel
src/: BUILD.bazel
tools/: Dockerfile.dazel
